@@ -1,0 +1,81 @@
+/^Project-Id-Version:/ b
+/^Report-Msgid-Bugs-To:/ b
+/^POT-Creation-Date:/ b
+/^PO-Revision-Date:/ b
+/^Last-Translator:/ b
+/^Language-Team:/ b
+/^Language:/ b
+/^MIME-Version:/ b
+/^Content-Type:/ b
+/^Content-Transfer-Encoding:/ b
+/^Plural-Forms:/ b
+
+s,%\([0-9]*\)C,%\1#,g
+
+s,a,ا,g
+s,b,ب,g
+s,c,ص,g
+s,d,د,g
+s,e,ع,g
+s,f,ف,g
+s,g,غ,g
+s,h,ه,g
+s,i,ִي,g
+s,j,يِ,g
+s,k,ك,g
+s,l,ل,g
+s,m,م,g
+s,n,ن,g
+s,o,و,g
+s,p,پ‎,g
+s,q,ق,g
+s,r,ر,g
+s,s,س,g
+s,t,ت,g
+s,u,و,g
+s,v,و,g
+s,w,و,g
+s,x,كس,g
+s,y,ي,g
+s,z,ز,g
+
+s,A,ا,g
+s,B,ب,g
+s,C,ص,g
+s,D,د,g
+s,E,ع,g
+s,F,ف,g
+s,G,غ,g
+s,H,ه,g
+s,I,ִي,g
+s,J,يِ,g
+s,K,ك,g
+s,L,ل,g
+s,M,م,g
+s,N,ن,g
+s,O,و,g
+s,P,پ‎,g
+s,Q,ق,g
+s,R,ر,g
+s,S,س,g
+s,T,ت,g
+s,U,و,g
+s,V,و,g
+s,W,و,g
+s,X,كس,g
+s,Y,ي,g
+s,Z,ز,g
+
+s,%\([0-9]*\)#,%\1C,g
+s,%\([0-9]*\)ص,%\1c,g
+s,%\([0-9]*\)د,%\1d,g
+s,%\([0-9]*\)لد,%\1ld,g
+s,%\([0-9]*\)للد,%\1lld,g
+
+s,%\([0-9\.\*]*\)س,%\1s,g
+s,%\([0-9]*\)لو,%\1lu,g
+s,%\([0-9]*\)و,%\1u,g
+s,%\([0-9]*\)للو,%\1llu,g
+s,%\([0-9]*\)كس,%\1x,g
+s,%\([0-9]*\)لكس,%\1lx,g
+s,%\([0-9]*\)للكس,%\1llx,g
